--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:              michaelmastrobuoni@gmail.com
 description:        Personal Blog and CV
 author:             Michael Mastrobuoni via StartBootstrap
 baseurl:            "/bootstrapsite"
-url:                "https://mmastrobuoni.github.io/bootstrapsite/"
+url:                "https://mmastrobuoni.github.io/site/"
 
 # Social Profiles
 twitter_username:   mmastrobuonii
