--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:              Mike Mastrobuoni
 email:              michaelmastrobuoni@gmail.com
 description:        Personal Blog and CV
 author:             Michael Mastrobuoni via StartBootstrap
-baseurl:            "/bootstrapsite"
+baseurl:            "/site"
 url:                "https://mmastrobuoni.github.io/site/"
 
 # Social Profiles
